tests/machine/x/go/join_multi.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/join_multi.go:12:17: undefined: CustomersItem
../../../tests/machine/x/go/join_multi.go:15:5: undefined: CustomersItem
../../../tests/machine/x/go/join_multi.go:19:14: undefined: OrdersItem
../../../tests/machine/x/go/join_multi.go:22:5: undefined: OrdersItem
../../../tests/machine/x/go/join_multi.go:26:13: undefined: ItemsItem
../../../tests/machine/x/go/join_multi.go:29:5: undefined: ItemsItem
../../../tests/machine/x/go/join_multi.go:33:21: undefined: Result
../../../tests/machine/x/go/join_multi.go:34:16: undefined: Result
../../../tests/machine/x/go/join_multi.go:44:32: undefined: Result

1: //go:build ignore
