tests/machine/x/go/join_multi.go
//go:build ignore

// Generated by Mochi compiler v0.10.25 on 2025-07-14T02:52:34Z

package main

import (
	"fmt"
)

func main() {
	customers := []CustomersItem{CustomersItem{
		Id:   1,
		Name: "Alice",
	}, CustomersItem{
		Id:   2,
		Name: "Bob",
	}}
	orders := []OrdersItem{OrdersItem{
		Id:         100,
		CustomerId: 1,
	}, OrdersItem{
		Id:         101,
		CustomerId: 2,
	}}
	items := []ItemsItem{ItemsItem{
		OrderId: 100,
		Sku:     "a",
	}, ItemsItem{
		OrderId: 101,
		Sku:     "b",
	}}
	result := func() []Result {
		results := []Result{}
		for _, o := range orders {
			for _, c := range customers {
				if !(o.CustomerId == c.Id) {
					continue
				}
				for _, i := range items {
					if !(o.Id == i.OrderId) {
						continue
					}
					results = append(results, Result{
						Name: c.Name,
						Sku:  i.Sku,
					})
				}
			}
		}
		return results
	}()
	fmt.Println("--- Multi Join ---")
	for _, r := range result {
		fmt.Println(r.Name, "bought item", r.Sku)
	}
}
